# axum-typed-method

./: Cargo.toml
axum-typed-method/: Cargo.toml
axum-typed-method/src/: lib.rs
examples/: Cargo.toml
examples/src/: main.rs
macros/: Cargo.toml
macros/src/: attr_parsing.rs  lib.rs
