[package]
name = "axum-typed-method-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
axum-typed-method = { version = "0.1.0", path = "../axum-typed-method" }
macros = { version = "0.1.0", path = "../macros" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
